# EE595_MFG

./: README.md  kalil_GS01_FNO.ipynb
ee595-project/: CMakeLists.txt  README.html  README.md  build.sh  inference.cpp  inference.h  result.pt  tensor.pt
ee595-project/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
